decrease quota for user surname and introduce modern scrollbar

--- a/Shopy/Content/shopy.css
+++ b/Shopy/Content/shopy.css
@@ -42,3 +42,26 @@
     border-radius: 6px;
     overflow: hidden;
 }
+
+/* Scrollbar */
+::-webkit-scrollbar {
+    width: .45rem;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: rgba(27, 27, 27, .4);
+    border-radius: 3px;
+}
+
+::-webkit-scrollbar-track {
+    background: transparent;
+}
+
+/* Navbar */
+#navbar {
+    width: 100vw;
+}
+
+#scroll {
+    opacity: .7;
+}
